--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
     <title>Youtube downloader</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1 class="appTitle">Youtube audio and video downloader</h1>
     <div class="mainDiv">
+      <label id="error" class="error"></label>
+      <br>
       <input type="url" class="url-form" placeholder="Enter the content URL"/>
       <div class="radio-inputs">
         <label class="radio">
           <input type="radio" name="radio" checked="">
-          <span class="name">Audio (mp3)</span>
+          <span class="name">Video (mp4)</span> 
         </label>
         <label class="radio">
           <input type="radio" name="radio">
-          <span class="name">Video (mp4)</span>
+          <span class="name">Audio (mp3)</span>
         </label>
       </div>
       <div class="selectDirectoryDiv">
